--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     <header>
         <div class="header_navbar">
             <div class="container">
-                <div class="row d-flex justify-content-between">
+                <div class="row d-flex justify-content-between alig-items-center">
                     <div class="col-2">
                         <div class="header_logo">
                             <img src="./assets/images/logobaby.png" alt="Please check your internet">
                         </div>
                     </div>
 
-                    <div class="col-4 d-flex align-items-center justify-content-between header_menu">
-                        <a href="#boshsahifa"> Bosh sahifa </a>
-                        <a href="#bizHaqimizda"> Biz haqimizda </a>
-                        <a href="#bog'lanish"> Bog’lanish </a>
+                    <div class="col-4 m-auto header_menu">
+                        <ul>
+                            <li><a href="#boshsahifa"> Bosh sahifa </a></li>
+                            <li><a href="#bizHaqimizda"> Biz haqimizda </a></li>
+                            <li><a href="#bog'lanish"> Bog’lanish </a></li>
+                        </ul>
                     </div>
 
                     <div class="col-4 text-end d-flex align-items-center justify-content-between">
