--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
     <!-- MAIN_START -->
     <main>
         <div class="main_info">
-            <div class="container d-flex justify-content-between">
+            <div class="container d-flex justify-content-between flex-wrap">
                 <div class="main_info__left">
                     <p>
                         Sog‘lom farzandni <span>MАMMOLIN®</span> va <span class="sperolin">SPEROLIN®</span> bilan
