--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                         </a>
                     </button>
                 </div>
-                <img class="product_img position-absolute" src="./assets/images/malibu.png" alt="">
+                <img class="product_img" src="./assets/images/malibu.png" alt="">
             </div>
         </div>
     </section>
