--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
         </div>
     </footer>
     <!-- FOOTER_FINISH -->
-
+    <script src="./script.js"></script>
     <script src="./js/all.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
