--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="header_title" id="boshsahifa">
-            <div class="container d-flex justify-content-between">
+            <div class="container d-flex justify-content-between dfw">
                 <div class="header_title_left">
                     <p class="title_p">
                         Mahsulotlarimiz bilan oilangizga
@@ -64,7 +64,7 @@
                         olib keling
                     </p>
 
-                    <div class="pages d-flex">
+                    <div class="pages dfw">
                         <div class="page d-flex align-items-center">
                             <img src="./assets/images/Untitled 4 2.png" alt="">
                             <p>
