--- a/index.html
+++ b/index.html
@@ -15,10 +15,35 @@
 <body>
     <!-- HEADER_START -->
     <header>
+        <div class="burger_menu">
+            <div class="container">
+                <div class="menu_left d-flex ">
+                    <div class="left_elements">
+                        <div class="header_logo_menu">
+                            <img src="./assets/images/logobaby.png" alt="Please check your internet">
+                        </div>
+                        
+                        <ul>
+                            <li><a href="#boshsahifa"> Bosh sahifa </a></li>
+                            <li><a href="#bizHaqimizda"> Biz haqimizda </a></li>
+                            <li><a href="#bog'lanish"> Bog’lanish </a></li>
+                        </ul>
+                        <a href="tel:+998 (71) 200 08 07" class="d-flex align-items-center">
+                            <img src="./assets/images/Ellipse 1.png" alt="Please check your internet">
+                            <p>
+                                +998 (71) 200 08 07
+                            </p>
+                        </a>
+                    </div>
+                    <i class="fa-solid fa-xmark"></i>
+                </div>
+            </div>
+        </div>
         <div class="header_navbar">
             <div class="container">
                 <div class="row d-flex justify-content-between alig-items-center">
-                    <div class="col-2">
+                    <div class="col-8 col-sm-7 col-lg-2 d-flex align-items-center">
+                        <i class="fa-solid fa-bars"></i>
                         <div class="header_logo">
                             <img src="./assets/images/logobaby.png" alt="Please check your internet">
                         </div>
@@ -32,9 +57,9 @@
                         </ul>
                     </div>
 
-                    <div class="col-4 text-end d-flex align-items-center justify-content-between">
+                    <div class="col-4 col-sm-2 col-lg-3 text-end d-flex align-items-center justify-content-between">
                         <div class="header_number d-flex align-items-center">
-                            <a href="#!" class="d-flex justify-content-end align-items-center">
+                            <a href="tel:+998 (71) 200 08 07" class="d-flex justify-content-end align-items-center">
                                 <img src="./assets/images/Ellipse 1.png" alt="Please check your internet">
                                 <p>
                                     +998 (71) 200 08 07
